# compylo

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  NOTES.md  README.md  default.nix  design_and_improvement.md  flake.nix  pyproject.toml  requirements.txt  shell.nix
src/: __init__.py  __main__.py  binder.py  compylo.py  desugar.py  errors.py  mapVisitor.py  printer.py  renamer.py  scopedMap.py  symbol.py  translator.py  typeChecker.py  typeInference.py  typeVisitor.py  types.py  visitor.py
src/compylo/: __init__.py  __main__.py  binder.py  desugar.py  errors.py  printer.py  renamer.py  scopedMap.py  scopes.py  singleton.py  symbol.py  translator.py  typeChecker.py  typeInference.py  type_inference.py  visitor.py
tests/: __init__.py  __main__.py  binder_tests.py  generate_tests.py  run_tests.py  test_all.py  test_binder.py  test_expressions.py  utils.py
tests/bind/: __use_out_scope_rvalue.py  bind.yaml  function_return_noexist.py  use_out_scope_rvalue.py  use_var_as_func.py
tests/good/: arthmetics.py  basic_function.py  basic_variable_function.py  use_out_scope_lvalue.py  variable_alias.py
tests/type/: call_args_reverse.py  call_var_wrong_type.py  function_wrong_arg_type.py  function_wrong_arg_type_assign.py  int_annot_string_assign.py  type.yaml  unknown_type.py  var_alias_wrong_type.py
