[tool.poetry]
name = "compylo"
version = "0.1.0"
description = "Simple compiler for a static \"Python-lite\" language."
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "compylo", from = "src" }]

[tool.poetry.scripts]
compylo = "compylo.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
llvmlite = "*"
termcolor = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = 'src/\.pyi?$'

[tool.ruff]
select = [
    "F",
    "E",
    "C90",
    # "I", <- too many false positives for some reason(s)
    "UP",
    # "N",
    "YTT",
    "B",
    "A",
    "C4",
    "ICN",
    "Q",
    "S",
    "BLE",
    "RET",
    "SIM",
    "TID",
    "RUF",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
]
ignore = [
    "S101", # Asserts
    "PLR2004", # Magic values
    # FIXME later
    "RET504", # Unnecessary variable assignment before `return` statement
    "F841", # Local variable `Int` is assigned to but never used
    "RET505", # Unnecessary `elif` after `return` statement
    "SIM102", # Use a single `if` statement instead of nested `if` statements
]
